--- a/abhi.html
+++ b/abhi.html
@@ -85,7 +85,7 @@
         </ul>
         <li>Cloud Service</li>
     </ul>
-    <a href="file:///C:/Users/T%20ABHISHEK/Desktop/PREPBYTES/sessions/ea12/ass1.html">Go back</a>
+    <a href="./ass1.html">Go back</a>
     
 </body>
 </html>
