--- a/ass1.html
+++ b/ass1.html
@@ -21,7 +21,7 @@
     <br>
     <hr>
     <b>Lists</b><br>
-    <a href="file:///C:/Users/T%20ABHISHEK/Desktop/PREPBYTES/sessions/ea12/abhi.html">click here</a>
+    <a href="./abhi.html">click here</a>
 
 </body>
 </html>
